tests/ui/impl-trait/issues/issue-57979-deeply-nested-impl-trait-in-assoc-proj.stderr
error[E0562]: `impl Trait` is not allowed in `impl Trait`
  --> $DIR/issue-57979-deeply-nested-impl-trait-in-assoc-proj.rs:14:48
   |
LL | pub fn demo(_: impl Quux<Assoc=Deeper<impl Foo<impl Bar>>>) { }
   |                                                ^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
